--- a/contact.css
+++ b/contact.css
@@ -2,48 +2,28 @@
 h2{
     font-family: 'Galada', cursive;
     text-align: center;
+    font-size: 200%;
     
-}
-
-main{
-
-    font-family: Georgia, 'Josefin Sans', sans-serif;
-    display: grid;
-    grid-template-columns: 40% 60%;
-    
-
-}
-
-.contactinfo{
-
-    color: #d38f19;
-    background-color:#ffe0ac;
-    position: relative;
-    padding: 12px;
-    text-align: center;
-    font-family: 'Josefin Sans', sans-serif;
-    -webkit-text-size-adjust: 100%;
-    font-size: 130%;
-
 }
 
 .form{
 
     color: #595e69;
     position: relative;
-    padding: 5rem;
+    padding: 05rem;
     text-align: left;
     font-family: 'Josefin Sans', sans-serif;
 
 }
 input[type=text] {
-    width: 60%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    width: 100%;
+    margin: 4px 0;
     box-sizing: border-box;
     border-style: solid;
     border-color: #ffe0ac;
     border-radius: 4px;
+    border-width: 2px;
+    padding: 12px 20px;
   }
 
   input[type=email] {
@@ -66,7 +46,7 @@ input[type=text] {
 
   textarea{
 
-    width: 60%;
+    width: 30%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -74,8 +54,12 @@ input[type=text] {
     border-width: 2px;
     border-color: #ffe0ac;
     border-radius: 4px;
-
   }
+
+  .message{
+    width: 60%;
+  }
+
 
 p{
     word-spacing: normal;
@@ -102,35 +86,132 @@ p{
   }
 
 
-  .nav-link{
-      font-family: 'Josefin Sans', sans-serif; 
-  }
-  .navbar-brand{
-    font-family: 'Galada', cursive;
+  /* Navbar */
+.navbar{
+  padding: 0 0 4.5rem;
+}
 
-  }
+.navbar-brand {
+  font-family: "Galada", cursive;
+  font-size: 3.5rem;
+  color: #ffacb7;
+}
 
-  .nav-link:hover{
-    color: #ca8918 ;
-  }
+.navbar-nav {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+}
+
+.nav-link {
+  color: #cc919a;
+}
+
+.nav-link:hover {
+  color: #ffacb7;
+}
+
+.fa-bars{
+  color: #ffacb7;
+}
+
+/* Header Section */
+
+.header-title {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  line-height: 1.2em;
+  font-size: 3.5rem;
+  color: #003366;
+}
+
+.title-img {
+  text-align: right;
+}
 
 
 .box{
-
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 3rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
     display: inline-block; /* Make the width of box same as image */
-}
-.box .text{
-    font-family: 'Galada', cursive;
-    position: relative;
-    z-index: 999;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    bottom: 30%; /* Adjust this value to move the positioned div up and down */
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+    background-color: #ffe0ac;
+    padding: 07rem;
     text-align: center;
-    width: 60%; /* Set the width of the positioned div */
+} 
+
+*{
+  margin:0;
+  padding:0; 
+  text-decoration: none;  
+}
+
+
+.socials a{
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  background: #ffacb7;
+  color: white;
+  border-radius: 50%;
+  justify-content: center;
+  transition: 0.4s;
+  font-size: 24px;
+  align-items: center;
+  position:relative; 
+
+}
+
+.socials a:hover{
+  background:#f77586;
+}
+
+.socials a i{
+transition: 0.4s all;
+
+}
+
+.socials a:hover > i{
+  transform: scale(1.6) rotate(25deg);
+
+}
+
+
+.row{
+
+  color: #ffacb7;
+  font-family: 'Josefin Sans', sans-serif;
+  -webkit-text-size-adjust: 100%;
+  font-size: 130%;
+
+}
+
+h5{
+  font-family: 'Galada', cursive;
+  text-align: center;
+  font-size: 150%;
+  color:#ff93a2;
+}
+
+@media only screen and (max-width: 430px){
+
+  .box{
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 2rem;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      display: inline-block; /* Make the width of box same as image */
+      margin-top: 0rem;
+      margin-bottom: 0rem;
+      background-color: #ffe0ac;
+      padding: 02rem;
+      text-align: center;
+  } 
+
 }
