--- a/contact.css
+++ b/contact.css
@@ -143,7 +143,7 @@ p{
     padding: 07rem;
     text-align: center;
 } 
-
+/* Footer css */
 *{
   margin:0;
   padding:0; 
@@ -196,6 +196,8 @@ h5{
   font-size: 150%;
   color:#ff93a2;
 }
+
+/* Footer css */
 
 @media only screen and (max-width: 430px){
 
