Made some changes

--- a/main.css
+++ b/main.css
@@ -93,7 +93,9 @@
   text-align: center;
 }
 
-/* Features  */
+/* Feature Section  */
+
+/* algorithm feature */
 #feature-algorithm {
   background-color: #6886c5;;
   color: white;
