--- a/blog.css
+++ b/blog.css
@@ -3,80 +3,115 @@
   .blog-header {
     line-height: 1;
     border-bottom: 1px solid #6886c5;
-  }
+    }
 
   .button:hover {
     background-color:#ffe0ac ;
     }
 
   .navbar-expand-xl{
-        position: sticky;
-        }
+    position: sticky;
+    }
 
   .navbar{
     padding: 0 4.5rem;
     background-color: white;
-  }
+    }
+
   .navbar-brand {
     font-family: 'Galada', cursive;
     font-size: 3.5rem;
     color: #FFACB7;
-  }
+    }
+
   .navbar-brand:hover {
     color: #CC919A;
-  }
+    }
+
   .navbar-nav {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 1.5rem;
-  }
+    }
+
   .nav-link {
     color: #CC919A;
-  }
+    }
+
   .nav-link:hover {
     color: #FFACB7;
-  }
+    }
+
   .fa-bars{
     color: #FFACB7;
-  }
+    }
 
   .blog-header-logo {
     font-family: 'Galada', cursive;
     font-size: 2.25rem;
-  }
+    }
 
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Josefin Sans', sans-serif;
-  }
+    }
+
+  .text-muted{
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
   .jumbotron-fluid{
-      background-color: #6886c5;
-  }
+    background-color: #6886c5;
+    }
+
+  .lead{
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
   .continue{
-      color: #f9f9f9;
-  }
+    color: #f9f9f9;
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
   .display-4 {
     font-size: 2.5rem;
-  }
+    }
+
   @media (min-width: 768px) {
     .display-4 {
-      font-size: 3rem;
+    font-size: 3rem;
     }
-  }
+   }
 
-  /*
-   * Blog posts
-   */
+  .p-4{
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
+  /** Blog posts */
+
   .blog-post {
     margin-bottom: 2rem;
-  }
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
   .blog-post-title {
     margin-bottom: .25rem;
     font-size: 2.5rem;
-  }
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
   .blog-post-meta {
     margin-bottom: 1.25rem;
     color: #6886c5;
-  }
-  
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
+  .c2{
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
+  .list-unstyled{
+    font-family: 'Josefin Sans', sans-serif;
+    }
+
   .socials a{
     display: inline-flex;
     width: 40px;
@@ -89,27 +124,25 @@
     font-size: 24px;
     align-items: center;
     position:relative; 
-  
-  }
+    }
   
   .socials a:hover{
     background:#f77586;
-  }
+    }
   
   .socials a i{
-  transition: 0.4s all;
-  
-  }
+    transition: 0.4s all;
+    }
   
   .socials a:hover > i{
     transform: scale(1.6) rotate(25deg);
-  
-  }
+    }
+
   @media only screen and (max-width: 990px) {
     .navbar {
-      padding: 0 10%;
+    padding: 0 10%;
     }
     .navbar-brand {
-      font-size: 2rem;
+    font-size: 2rem;
     }
 }
