--- a/Q&A.css
+++ b/Q&A.css
@@ -19,6 +19,7 @@ h3{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
 }
 
+
 .Topbox{
     border-style: solid;
     border-width: 5%;
@@ -27,105 +28,83 @@ h3{
     padding-right: 20%;
     background-color: #ffacb7;
     color: #f9f9f9;
-    position: absolute;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 3% 8%;
+    justify-content: space-evenly; 
+}
+
+.column1 {
+    flex: 20%;
+    background-color: #ffacb7;
+    color: #F9F9F9;
+    height: 50%;
+    padding-left: 2%;
+    padding-top: 2%;
+}
+
+.randomcolumn{
+    flex: 5%;
+}
+
+.column2 {
+    flex: 75%; 
+    color: grey;
+}
+
+.column3{
+    flex: 75%; 
+    color: grey;
+}
+
+.column4{
+    flex: 75%; 
+    color: grey;
+}
+
+.column5{
+    flex: 75%; 
+    color: grey;
+}
+
+.column6{
+    flex: 75%; 
+    color: grey;
 }
 
 .Organizer{
-    border-style: solid;
-    border-width: 5%;
-    border-color: #ffacb7;
     background-color: #ffacb7;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 8%;
-    padding-bottom: 8%;
-    position: absolute; 
-    left: 2%; 
-    top: 41%;
-    color: #F9F9F9; 
+    color: #F9F9F9;
+    width: 100%; 
 }
 
-
-.Questions{
-    border-style: solid;
-    border-width: 1%;
-    border-color: #F9F9F9;
-    background-color: #F9F9F9; 
-    position: absolute;
-    margin-right: 10%;
-    margin-left: 25%;
-    top: 41%;
-}
-
-.SafetyTips {
-    border-style: solid;
-    border-width: 1%;
-    border-color: #F9F9F9;
-    background-color: #F9F9F9; 
-    position: absolute;
-    margin-right: 10%;
-    margin-left: 25%;
-    top: 41%;
-}
-
-.PrivacyConcerns{
-    border-style: solid;
-    border-width: 1%;
-    border-color: #F9F9F9;
-    background-color: #F9F9F9; 
-    position: absolute;
-    margin-right: 10%;
-    margin-left: 25%;
-    top: 41%;
-}
-
-.Report {
-    border-style: solid;
-    border-width: 1%;
-    border-color: #F9F9F9;
-    background-color: #F9F9F9; 
-    position: absolute;
-    margin-right: 10%;
-    margin-left: 25%;
-    top: 41%;
-}
-
-.Resources {
-    border-style: solid;
-    border-width: 1%;
-    border-color: #F9F9F9;
-    background-color: #F9F9F9; 
-    position: absolute;
-    margin-right: 10%;
-    margin-left: 25%; 
-    top: 41%;
-}
 
 .navbar{
-    padding: 0 0 4.5rem;
+    padding: 0 4.5rem;
+    background-color: white;
   }
-  
   .navbar-brand {
-    font-family: "Galada", cursive;
+    font-family: 'Galada', cursive;
     font-size: 3.5rem;
-    color: #ffacb7;
+    color: #FFACB7;
   }
-  
+  .navbar-brand:hover {
+    color: #CC919A;
+  }
   .navbar-nav {
-    font-family: "Josefin Sans", sans-serif;
+    font-family: “Josefin Sans”, sans-serif;
     font-size: 1.5rem;
   }
-  
   .nav-link {
-    color: #cc919a;
+    color: #CC919A;
   }
-  
   .nav-link:hover {
-    color: #ffacb7;
+    color: #FFACB7;
   }
-  
   .fa-bars{
-    color: #ffacb7;
+    color: #FFACB7;
   }
 
 footer{
