--- a/storeSheet.css
+++ b/storeSheet.css
@@ -119,19 +119,21 @@ label{
     align-items: center;
     position: relative;
     margin-left: 8px;
+}
   
-  }
-  
-  .socials a:hover{
+.socials a:hover{
     background:#f77586;
-  }
-  
-  .socials a i{
-  transition: 0.4s all;
-  
-  }
-  
-  .socials a:hover > i{
+}
+
+.socials a i{
+    transition: 0.4s all;
+
+}
+
+.socials a:hover > i{
     transform: scale(1.6) rotate(25deg);
-  
-  }
+}
+
+.list-unstyled{
+    font-family: ‘Josefin Sans’, sans-serif;
+}
